# wallpaper-changer

./: Cargo.toml  README.md  appveyor.yml  wallpapers.json
src/: main.rs  structs.rs  utils.rs  windows.rs
