[package]
name = "wallpaper-changer"
version = "0.1.0"
authors = ["ElXreno <elxreno@gmail.com>"]
edition = "2018"

# Profiles
[profile.dev]
opt-level = 1
overflow-checks = true
debug-assertions = true
panic = "abort"
codegen-units = 8
lto = false
incremental = true

[profile.release]
opt-level = 3
codegen-units = 1
overflow-checks = false
debug-assertions = false
panic = 'abort'
lto = true
debug = false

[dependencies]
wallpaper = { git = "https://github.com/ElXreno/wallpaper.rs" }
reqwest = { version = "0.10.1", features = ["blocking"] }
serde = "1.0.104"
serde_json = "1.0.47"
online = "0.2.2"
