[package]
name = "wallpaper-changer"
version = "0.1.0"
authors = ["ElXreno <elxreno@gmail.com>"]
edition = "2018"

# Profiles
[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
wallpaper = { git = "https://github.com/ElXreno/wallpaper.rs" }
reqwest = { version = "0.10.1", features = ["blocking"] }
serde = "1.0.104"
serde_json = "1.0.47"
online = "0.2.2"
